Update Bench with new parameters